Add gateway variables to example inventory file
[Doc]Example inventory files in AAP 2.5 docs don't include necessary parameters.

https://issues.redhat.com/browse/AAP-32701

--- a/downstream/assemblies/platform/assembly-inventory-introduction.adoc
+++ b/downstream/assemblies/platform/assembly-inventory-introduction.adoc
@@ -64,6 +64,12 @@ pg_password='<password>'
 registry_url='registry.redhat.io'
 registry_username='<registry username>'
 registry_password='<registry password>'
+
+automationgateway_admin_password=""
+automationgateway_pg_host=""
+automationgateway_pg_database=""
+automationgateway_pg_username=""
+automationgateway_pg_password=""
 ----
 
 The first part of the inventory file specifies the hosts or groups that Ansible can work with.
