Removed context marker to make build work
Fis issue in Controller Admin Guide

https://issues.redhat.com/browse/AAP-33452

--- a/downstream/assemblies/platform/assembly-metrics-utility.adoc
+++ b/downstream/assemblies/platform/assembly-metrics-utility.adoc
@@ -5,7 +5,7 @@ ifdef::context[:parent-context-of-metrics-utility: {context}]
 
 :_mod-docs-content-type: ASSEMBLY
 
-[id="metrics-utility_{context}"]
+[id="metrics-utility"]
 
 :context: metrics-utility
 
