--- a/downstream/modules/platform/proc-configuring-the-metrics-utility.adoc
+++ b/downstream/modules/platform/proc-configuring-the-metrics-utility.adoc
@@ -2,7 +2,7 @@
 :_template-generated: 2024-07-15
 :_mod-docs-content-type: PROCEDURE
 
-[id="configuring-the-metrics-utility_{context}"]
+[id="configuring-the-metrics-utility"]
 = Configuring metrics-utility
 
 
