--- a/downstream/modules/platform/proc-gw-editing-a-user.adoc
+++ b/downstream/modules/platform/proc-gw-editing-a-user.adoc
@@ -12,7 +12,7 @@ To see whether a user had service level auditor privileges, you must refer to th
 
 [NOTE]
 ====
-Users previously designated as automation controller or automation hub administrators are labeled as *Normal* in the *User type* column in the xref:proc-gw-users-list-view[Users list view]. You can see whether these users have administrator privileges, from the *Edit Users* page.
+Users previously designated as {ControllerName} or {HubName} administrators are labeled as *Normal* in the *User type* column in the xref:proc-gw-users-list-view[Users list view]. You can see whether these users have administrator privileges, from the *Edit Users* page.
 ====
 
 .Procedure
