Adding warning admonition

--- a/stories/assembly-saas-post-install-config.adoc
+++ b/stories/assembly-saas-post-install-config.adoc
@@ -8,6 +8,11 @@ After subscribing to {SaaSonAWSShort} and gaining access to {PlatformNameShort},
 For help with configuring your automation mesh see
 link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[Red Hat Ansible Automation Platform Automation Mesh for operator-based installations].
 
+[WARNING]
+====
+Do not change the "Base URL of the service" or "Gateway proxy URL" settings. Changing the base URL will break notification links, and altering the gateway proxy might cause false outages on the status page.
+====
+
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
 
