Add note about external server
Add explict statement stating 'NFS is external server'

https://issues.redhat.com/browse/AAP-32889

--- a/downstream/modules/platform/proc-install-ha-hub-selinux.adoc
+++ b/downstream/modules/platform/proc-install-ha-hub-selinux.adoc
@@ -11,6 +11,11 @@ You must add the context for `/var/lib/pulp` pulpcore_static and run the {Platfo
 
 .Prerequisites
 * You have already configured a NFS export on your server.
++
+[NOTE]
+====
+The NFS share is hosted on an external server and is not a part of high availability {HubName} deployment.
+====
 
 .Procedure
 . Create a mount point at `/var/lib/pulp`:
