AAP-32980 Corrected broken links and incorrect titles in the Operating AAP guide (#2356)
* AAP-32980 Corrected the automation mesh guide links

* AAP-32980 Corrected links to the variable appendices

* AAP-32980 Corrected the automation mesh guide links

* AAP-32980 Corrected links to the variable appendices

* AAP-32980 Corrected links to the variable appendices

* AAP-32980 Corrected the automation mesh guide links

* AAP-32980 Corrected the automation mesh guide links

* AAP-32980 Corrected links to the variable appendices

--- a/downstream/modules/platform/con-why-automation-mesh.adoc
+++ b/downstream/modules/platform/con-why-automation-mesh.adoc
@@ -16,6 +16,6 @@ The {AutomationMesh} component of the {PlatformName} simplifies the process of d
 
 * For information about automation mesh and the various ways to design your automation mesh for your environment:
 
-** For a VM-based installation, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_guide_for_vm-based_installations/index[{PlatformName} {AutomationMesh} guide for VM-based installations].
+** For a VM-based installation, see the link:{LinkAutomationMesh}.  
 
-** For an operator-based installation, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[{PlatformName} {AutomationMesh} for operator-based installations].
+** For an operator-based installation, see the link:{LinkOperatorMesh}
