link fixes in gs with aap guide

--- a/downstream/modules/platform/con-gs-learn-about-collections.adoc
+++ b/downstream/modules/platform/con-gs-learn-about-collections.adoc
@@ -7,7 +7,7 @@ Ansible content collections are assemblages of automation content. There are two
 * *{CertifiedName}*, which contain fully-supported roles and modules that are enterprise- and production-ready for use in your environments.
 * *{Valid} collections*, which provide you with a trusted, expert-guided approach for performing foundational operations and tasks in your product. 
 
-Both types of content collections can be found in {HubName} through the link:{Console}[Hybrid Cloud Console].
+Both types of content collections can be found in {HubName} through the link:https://console.redhat.com/ansible/automation-hub/[Hybrid Cloud Console].
 
 == Downloading content 
 
