--- a/downstream/modules/platform/proc-gs-auto-dev-create-automation-execution-proj.adoc
+++ b/downstream/modules/platform/proc-gs-auto-dev-create-automation-execution-proj.adoc
@@ -12,22 +12,18 @@ You can set up an automation execution project in the platform UI.
 Procedure
 . From the navigation panel, select {MenuAEProjects}.
 . On the *Projects* page, click btn:[Create project] to launch the *Create Project* window.
-+
-//image:projects-create-new-project.png[Projects- create new project]
-
 . Enter the appropriate details into the following required fields:
 
 * *Name* (required)
 * Optional: *Description*
 * *Organization* (required): A project must have at least one organization. Select one organization now to create the project. When the project is created you can add additional organizations.
 * Optional: *Execution Environment*: Enter the name of the {ExecEnvShort} or search from a list of existing ones to run this project.
-For more information, see link:{URLUpgrade}/upgrading-to-ees[Migrating to automation execution environments] in the {TitleUpgrade}.
 * *Source Control Type* (required): Select an SCM type associated with this project from the menu.
 Options in the following sections become available depending on the type chosen.
-For more information, see link:{URLControllerUserGuide}/index#proc-projects-manage-playbooks-manually[Managing playbooks manually] or link:{URLControllerUserGuide}/index#ref-projects-manage-playbooks-with-source-control[Managing playbooks using source control].
+For more information, see link:{URLControllerUserGuide}/controller-projects#proc-controller-adding-a-project[Managing playbooks manually] or link:{URLControllerUserGuide}/controller-projects#ref-projects-manage-playbooks-with-source-control[Managing playbooks using source control].
 * Optional: *Content Signature Validation Credential*: Use this field to enable content verification.
 Specify the GPG key to use for validating content signature during project synchronization.
 If the content has been tampered with, the job will not run.
-For more information, see link:{URLControllerUserGuide}/index#assembly-controller-project-signing[Project signing and verification].
+For more information, see link:{URLControllerUserGuide}/assembly-controller-project-signing[Project signing and verification].
 . Click btn:[Create project].
 
