fixes broken links throughout guide

--- a/downstream/modules/platform/con-gs-ansible-roles.adoc
+++ b/downstream/modules/platform/con-gs-ansible-roles.adoc
@@ -6,15 +6,4 @@ A role is like a customized piece of automation content that bundles together re
 
 Instead of creating huge playbooks with hundreds of tasks, you can use roles to break the tasks apart into smaller, more discrete units of work. 
 
-To learn more about roles, see link:https://www.redhat.com/en/topics/automation/what-is-an-ansible-role#why-use-a-role-instead-of-a-playbook[What is an Ansible Role-and how is it used?].
-
-== Creating a role
-
-You can create roles using the Ansible Galaxy CLI tool, which is included with your {PlatformNameShort} bundle. Access role-specific commands from the roles subcommand:
-
-[source,bash]
-----
-ansible-galaxy role init <role_name>
-----
-
-Standalone roles outside of collections are still supported, but we recommend that you create new roles inside of a collection to take advantage of all the features {PlatformNameShort} has to offer.
+To learn more about roles, see link:https://www.redhat.com/en/topics/automation/what-is-an-ansible-role[What is an Ansible Role-and how is it used?].
