--- a/downstream/modules/platform/con-gs-auto-dev-about-inv.adoc
+++ b/downstream/modules/platform/con-gs-auto-dev-about-inv.adoc
@@ -18,7 +18,7 @@ Use the following procedure to create a new inventory.
 * *Name*: Enter a name for the inventory.
 * Optional: *Description*: Enter a description.
 * *Organization*: Choose among the available organizations. 
-* Only applicable to Smart Inventories: *Smart Host Filter*:  Filters are similar to tags in that tags are used to filter certain hosts that contain those names. Therefore, to populate this field, specify a tag that contains the hosts you want, not the hosts themselves. Filters are case-sensitive. For more information, see link:{URLControllerUserGuide}/index#ref-controller-smart-host-filter[Smart host filters] in the {TitleControllerUserGuide} guide.
+* Only applicable to Smart Inventories: *Smart Host Filter*:  Filters are similar to tags in that tags are used to filter certain hosts that contain those names. Therefore, to populate this field, specify a tag that contains the hosts you want, not the hosts themselves. Filters are case-sensitive. For more information, see link:{URLControllerUserGuide}/controller-inventories#ref-controller-smart-host-filter[Smart host filters] in the {TitleControllerUserGuide} guide.
 * *Instance groups*: Select the instance group or groups for this inventory to run on. If the list is extensive, use the search to narrow the options. You can select multiple instance groups and sort them in the order that you want them run.
 * Optional: *Labels*: Add labels that describe this inventory, so they can be used to group and filter inventories and jobs.
 * Only applicable to constructed inventories: *Input inventories*: Specify the source inventories to include in this constructed inventory. Empty groups from input inventories are copied into the constructed inventory.
@@ -27,7 +27,7 @@ Use the following procedure to create a new inventory.
 ** Verbose logging includes the output of all commands. 
 ** Debug logging is exceedingly verbose and includes information on SSH operations that can be useful in certain support instances. Most users do not need to see debug mode output.
 * Only applicable to constructed inventories: *Limit*: Restricts the number of returned hosts for the inventory source associated with the constructed inventory. You can paste a group name into the limit field to only include hosts in that group. For more information, see the *Source variables* setting.
-* Only applicable to standard inventories: *Options*: Check the box next to *Prevent instance group fallback* to enable only the instance groups listed in the *Instance groups* field to execute the job. If unchecked, all available instances in the execution pool will be used based on the hierarchy described in link:{URLControllerAdminGuide}/controller-instance-and-container-groups#controller-control-job-run[Control where a job runs] in the {TitleControllerAdminGuide} guide. Click the tooltip for more information.
+* Only applicable to standard inventories: *Options*: Check the box next to *Prevent instance group fallback* to enable only the instance groups listed in the *Instance groups* field to execute the job. If unchecked, all available instances in the execution pool will be used based on the hierarchy described in link:{URLControllerAdminGuide}/controller-clustering#controller-cluster-job-runs[Control where a job runs] in the {TitleControllerAdminGuide} guide. Click the tooltip for more information.
 +
 NOTE: Set the `prevent_instance_group_fallback` option for smart inventories through the API. 
 +
