--- a/downstream/modules/platform/con-gs-auto-op-execute-inv.adoc
+++ b/downstream/modules/platform/con-gs-auto-op-execute-inv.adoc
@@ -15,5 +15,5 @@ The *Inventories* window displays a list of inventories that are currently avail
 * *Organization*: The organization to which the inventory belongs. 
 . Select an inventory name to display the *Details* page for the inventory, including the inventory's groups and hosts.
 
-For more information about inventories, see the link:{URLControllerUserGuide}/index#controller-inventories[Inventories] section of the {TitleControllerUserGuide} guide.
+For more information about inventories, see the link:{URLControllerUserGuide}/controller-inventories[Inventories] section of the {TitleControllerUserGuide} guide.
 
