--- a/downstream/modules/platform/proc-creating-ansible-role.adoc
+++ b/downstream/modules/platform/proc-creating-ansible-role.adoc
@@ -4,6 +4,11 @@
 
 You can create roles using the {Galaxy} CLI tool, which is included with your {PlatformNameShort} bundle. Access role-specific commands from the `role` subcommand:
 
+[source,bash]
+----
+ansible-galaxy role init <role_name>
+----
+
 Standalone roles outside of Collections are supported.
 Create new roles inside a Collection to take advantage of the features {PlatformNameShort} has to offer.
 
