--- a/downstream/modules/platform/proc-gs-auto-op-launch-template.adoc
+++ b/downstream/modules/platform/proc-gs-auto-op-launch-template.adoc
@@ -16,5 +16,5 @@ The *Templates* list view shows job templates that are currently available. The 
 
 From this screen you can launch, edit, and copy a job template. 
 
-For more information about templates see the link:{URLControllerUserGuide}/index#controller-job-templates[Job templates] and link:{URLControllerUserGuide}/index#controller-workflow-job-templates[Workflow job templates] sections of the {TitleControllerUserGuide}.
+For more information about templates see the link:{URLControllerUserGuide}/controller-job-templates[Job Templates] and link:{URLControllerUserGuide}/controller-workflow-job-templates[Workflow job templates] sections of the {TitleControllerUserGuide} guide.
 
