--- a/downstream/modules/platform/proc-gs-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/platform/proc-gs-eda-set-up-rulebook-activation.adoc
@@ -9,7 +9,6 @@
 
 * You have set up a project.
 * You have set up a decision environment.
-* You have set up an {ControllerName} token. See link:{URLEDAUserGuide}/index#eda-set-up-token-to-authenticate[Setting up an {ControllerName} token] in the {TitleEDAUserGuide} guide for more information.
 
 .Procedure
 . From the navigation panel, select {MenuADRulebookActivations}.
@@ -24,7 +23,7 @@
 +
 [NOTE]
 ====
-The credentials that display in this field are customized based on your rulebook activation and only include the following credential types: Vault, {PlatformName}, or any custom credential types that you have created. For more information about credentials, see link:{URLControllerUserGuide}/index#eda-set-up-credential[Setting up credentials for {EDAcontroller}] in the {TitleControllerUserGuide} guide.
+The credentials that display in this field are customized based on your rulebook activation and only include the following credential types: Vault, {PlatformName}, or any custom credential types that you have created. For more information about credentials, see link:{URLEDAUserGuide}/eda-credentials[Credentials] in the {TitleEDAUserGuide} guide.
 ====
 //[J. Self] Might need to update the link above for the updated Credentials section.
 * *Decision environment*: A decision environment is a container image to run Ansible rulebooks.
