--- a/downstream/modules/platform/proc-gs-write-playbook.adoc
+++ b/downstream/modules/platform/proc-gs-write-playbook.adoc
@@ -63,7 +63,7 @@ PLAY RECAP ******************************************************************
 
 .Additional resources
 
-* For more information on playbooks, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/getting_started_with_ansible_playbooks/index#ref-playbook-execution[Getting Started with Ansible Playbooks].
+* For more information on playbooks, see link:{LinkPlaybooksGettingStarted}.
 * If you need help writing a playbook, see
 link:https://developers.redhat.com/products/ansible/lightspeed?source=sso[{LightspeedFullName}].
 
