--- a/downstream/modules/platform/con-gs-auto-op-job-templates.adoc
+++ b/downstream/modules/platform/con-gs-auto-op-job-templates.adoc
@@ -4,6 +4,6 @@
 
 A job template is a definition and set of parameters for running an Ansible job.
 
-A job template combines an Ansible Playbook from a project with the settings required to launch the job. Job templates are useful for running the same job many times. Job templates also encourage the reuse of Ansible Playbook content and collaboration between teams. For more information, see link:{URLControllerUserGuide}/index#controller-job-templates[Job Templates] in the {TitleControllerUserGuide} guide.
+A job template combines an Ansible Playbook from a project with the settings required to launch the job. Job templates are useful for running the same job many times. Job templates also encourage the reuse of Ansible Playbook content and collaboration between teams. For more information, see link:{URLControllerUserGuide}/controller-job-templates[Job Templates] in the {TitleControllerUserGuide} guide.
 
 Platform administrators and automation developers have the permissions to create job templates. As an automation operator you can launch job templates and view their details.
