--- a/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
@@ -39,11 +39,11 @@ include::platform/proc-gs-auto-dev-set-up-decision-env.adoc[leveloffset=+2]
 include::platform/proc-gs-auto-dev-create-automation-execution-proj.adoc[leveloffset=+1]
 include::platform/proc-gs-auto-dev-create-automation-decision-proj.adoc[leveloffset=+1]
 include::platform/con-gs-auto-dev-about-inv.adoc[leveloffset=+1]
-include::platform/proc-controller-create-inventory.adoc[leveloffset=+2]
+// [hherbly] this repeats module above include::platform/proc-controller-create-inventory.adoc[leveloffset=+2]
 include::platform/con-gs-auto-dev-job-templates.adoc[leveloffset=+1]
 include::platform/proc-controller-getting-started-with-job-templates.adoc[leveloffset=+2]
 include::platform/proc-gs-auto-dev-create-template.adoc[leveloffset=+2]
-include::platform/proc-gs-auto-dev-run-template.adoc[leveloffset=+2]
+// [hherbly] incomplete module? include::platform/proc-gs-auto-dev-run-template.adoc[leveloffset=+2]
 include::platform/proc-controller-edit-job-template.adoc[leveloffset=+2]
 include::platform/con-gs-rulebook-activations.adoc[leveloffset=+1]
 include::platform/proc-gs-eda-set-up-rulebook-activation.adoc[leveloffset=+2]
