--- a/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
+++ b/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
@@ -4,7 +4,7 @@
 
 .Prerequisites
 
-* An {ExecEnvShort} must have been created using ansible-builder as described in link:{URLBuilder}/index#assembly-using-builder[Using {Builder}]. 
+* An {ExecEnvShort} must have been created using ansible-builder as described in link:{URLBuilder}/assembly-using-builder[Using {Builder}]. 
 When an {ExecEnvShort} has been created, you can use it to run jobs. 
 Use the {ControllerName} UI to specify the execution environment to use in your job templates.
 * Depending on whether an {ExecEnvShort} is made available for global use or tied to an organization, you must have the appropriate level of administrator privileges to use an {ExecEnvShort} in a job. 
@@ -38,4 +38,4 @@ When you have added an {ExecEnvShort} to a job template, the template will be li
 
 If you have many {ExecEnvShort} that you want to maintain, you can store them in a container registry linked to your {PrivateHubName}. 
 
-For more information, see link:{URLBuilder}/index#populate-container-registry[Populating your private automation hub container registry] from the {TitleBuilder} guide.  
+For more information, see link:{URLBuilder}/populate-container-registry[Populating your private automation hub container registry] from the {TitleBuilder} guide.  
