--- a/downstream/modules/platform/proc-gs-auto-dev-create-template.adoc
+++ b/downstream/modules/platform/proc-gs-auto-dev-create-template.adoc
@@ -111,7 +111,7 @@ For more information about job slices, see link:{URLControllerUserGuide}/control
 - A timeout of 0 on a job template defaults the job to the global timeout (which is no timeout by default).
 - A positive timeout sets the timeout for that job template. | Yes
 | Show Changes | Enables you to see the changes made by Ansible tasks. | Yes
-| Instance Groups | Choose link:{URLControllerUserGuide}/assembly-controller-topology-viewer[Instance and Container Groups] to associate with this job template.
+| Instance Groups | Choose link:{URLControllerUserGuide}/controller-instance-and-container-groups#controller-instance-group-policies[Instance and Container Groups] to associate with this job template.
 If the list is extensive, use the image:examine.png[examine,15,15] icon to narrow the options.
 Job template instance groups contribute to the job scheduling criteria, see link:{URLControllerUserGuide}/assembly-controller-topology-viewer#controller-job-runtime-behavior[Job Runtime Behavior] and link:{URLControllerAdminGuide}controller-clustering#controller-cluster-job-runtime[Control where a job runs] for rules.
 A System Administrator must grant you or your team permissions to be able to use an instance group in a job template.
@@ -144,7 +144,7 @@ This is the equal of passing the `--become` option to the `ansible-playbook` com
 For more information, see link:{URLControllerUserGuide}/controller-job-templates#controller-provisioning-callbacks[Provisioning Callbacks].
 * *Enable webhook*: If checked, you turn on the ability to interface with a predefined SCM system web service that is used to launch a job template.
 GitHub and GitLab are the supported SCM systems.
-** If you enable webhooks, other fields display, prompting for additional information:
+If you enable webhooks, other fields display, prompting for additional information:
 +
 //image::ug-job-templates-options-webhooks.png[Job templates webhooks]
 +
