--- a/downstream/modules/platform/proc-gs-publish-to-a-collection.adoc
+++ b/downstream/modules/platform/proc-gs-publish-to-a-collection.adoc
@@ -13,13 +13,13 @@ You can configure your projects to be uploaded to Git, or to the source control 
 . Enter the appropriate details into the following fields: 
 .. *Source Control URL* - see an example in the tooltip.
 .. Optional: *Source control branch/tag/commit*: Enter the SCM branch, tags, commit hashes, arbitrary refs, or revision number (if applicable) from the source control to checkout. Some commit hashes and references might not be available unless you also provide a custom refspec in the next field. If left blank, the default is `HEAD`, which is the last checked out branch, tag, or commit for this project. 
-.. *Source Control Refspec* - This field is an option specific to Git source control and only advanced users familiar and comfortable with Git should specify which references to download from the remote repository. For more information, see link:{URLControllerUserGuide}controller-jobs#controller-job-branch-overriding[Job branch overriding].
+.. *Source Control Refspec* - This field is an option specific to Git source control and only advanced users familiar and comfortable with Git should specify which references to download from the remote repository. For more information, see link:{URLControllerUserGuide}/controller-jobs#controller-job-branch-overriding[Job branch overriding].
 .. *Source Control Credential* - If authentication is required, select the appropriate source control credential.
 . Optional: *Options* - select the launch behavior, if applicable: 
 .. *Clean* - Removes any local modifications before performing an update. 
 .. *Delete* - Deletes the local repository in its entirety before performing an update. Depending on the size of the repository this can significantly increase the amount of time required to complete an update.
 .. *Track submodules* - Tracks the latest commit. See the tooltip for more information.
-.. *Update Revision on Launch* - Updates the revision of the project to the current revision in the remote source control, and caches the roles directory from link:https://docs.ansible.com/automation-controller/latest/html/userguide/projects.html#ug-galaxy[{Galaxy}] or link:{URLControllerUserGuide}controller-projects#ref-projects-collections-support[Collections support]. {ControllerNameStart} ensures that the local revision matches and that the roles and collections are up-to-date with the last update. In addition, to avoid job overflows if jobs are spawned faster than the project can synchronize, selecting this enables you to configure a cache timeout to cache previous project synchronizations for a given number of seconds.
-.. *Allow Branch Override* - Enables a job template or an inventory source that uses this project to start with a specified SCM branch or revision other than that of the project. For more information, see link:{URLControllerUserGuide}controller-jobs#controller-job-branch-overriding[Job branch overriding].
+.. *Update Revision on Launch* - Updates the revision of the project to the current revision in the remote source control, and caches the roles directory from link:https://docs.ansible.com/automation-controller/latest/html/userguide/projects.html#ug-galaxy[{Galaxy}] or link:{URLControllerUserGuide}/controller-projects#ref-projects-collections-support[Collections support]. {ControllerNameStart} ensures that the local revision matches and that the roles and collections are up-to-date with the last update. In addition, to avoid job overflows if jobs are spawned faster than the project can synchronize, selecting this enables you to configure a cache timeout to cache previous project synchronizations for a given number of seconds.
+.. *Allow Branch Override* - Enables a job template or an inventory source that uses this project to start with a specified SCM branch or revision other than that of the project. For more information, see link:{URLControllerUserGuide}/controller-jobs#controller-job-branch-overriding[Job branch overriding].
 . Click btn:[Save] to save your project.
 
