Link fixes in getting started with AAP guide (#2358)
* link fixes in gs with aap guide

* fixes broken links throughout guide

* further cleanup

--- a/downstream/modules/platform/proc-creating-ansible-role.adoc
+++ b/downstream/modules/platform/proc-creating-ansible-role.adoc
@@ -4,6 +4,11 @@
 
 You can create roles using the {Galaxy} CLI tool, which is included with your {PlatformNameShort} bundle. Access role-specific commands from the `role` subcommand:
 
+[source,bash]
+----
+ansible-galaxy role init <role_name>
+----
+
 Standalone roles outside of Collections are supported.
 Create new roles inside a Collection to take advantage of the features {PlatformNameShort} has to offer.
 
@@ -50,6 +55,3 @@ $ ansible-galaxy role init my_role --role-skeleton ~/role_skeleton
 +
 This creates a role named `my_role` by copying the contents of `~/role_skeleton` into `my_role`.
 The contents of `role_skeleton` can be any files or folders that are valid inside a role directory.
-
-For more information on creating roles, see [Aine’s new devtools content].
-
