--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -5,6 +5,31 @@
 [cols="50%,50%,50%",options="header"]
 |====
 | *RPM variable name* | *Container variable name* | *Description*
+| |`bundle_dir` |The path to the bundle directory.
+
+Default = `false`
+| |`bundle_install` |Use offline installation. Set to `true` to enable offline installation. 
+
+Default = `false`
+
+| |`ca_tls_cert` | Define a Certification Authority certificate here along with a matching key in `ca_tls_key` when you want the installer to create leaf certificates for each product for you.
+
+| |`ca_tls_key` | Define the key for a Certication Authority certificate here for the matching certificate in `ca_tls_cert` when you want the installer to create leaf certs for each product for you.
+
+| |`ca_tls_remote` |TLS CA remote files.
+
+Default = `false`
+| |`container_compress` |Container compression software.
+
+Default = `gzip`
+| |`container_keep_images` |Keep container images.
+
+Default = `false`
+| |`container_pull_images` |Pull newer container images.
+
+Default = `true`
+| |`custom_ca_cert` | Define a custom Certification Authority certificate here when you have the leaf certificates created for each product and need the certificate trust to be established.
+
 | `enable_insights_collection` | | The default install registers the node to the {InsightsName} for the {PlatformName} Service if the node is registered with Subscription Manager. 
 
 Set to `False` to disable.
@@ -26,6 +51,16 @@ Default = `TLSv1.2`
 Each element in the list is provided into `http nginx config` as a separate line. 
 
 Default = empty list
+| |`registry_auth` |Use registry authentication.
+
+Default = `true`
+
+| |`registry_ns_aap` |{PlatformNameShort} registry namespace.
+
+Default = `ansible-automation-platform-25`
+| |`registry_ns_rhel` |RHEL registry namespace.
+
+Default = `rhel8`
 | `registry_password` |`registry_password` | This variable is only required if a non-bundle installer is used.
 
 Password credential for access to `registry_url`.
@@ -35,6 +70,10 @@ Enter your Red Hat Registry Service Account credentials in `registry_username` a
 When `registry_url` is `registry.redhat.io`, username and password are required if not using a bundle installer.
 
 For more information, see link:{URLInstallationGuide}/assembly-platform-install-scenario#proc-set-registry-username-password[Setting registry_username and registry_password].
+| |`registry_tls_verify` |Verify registry TLS.
+
+Default = `true`
+
 | `registry_url` |`registry_url` | URL for the registry source. 
 
 Default = `registry.redhat.io`
@@ -52,41 +91,6 @@ If `routable_hostname` is not set, it should default to `ansible_host`. If you d
 This variable is used as a host variable for particular hosts and not under the `[all:vars]` section. 
 
 For further information, see link:https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html#assigning-a-variable-to-one-machine-host-variables[Assigning a variable to one machine: host variables].
-| |`bundle_dir` |The path to the bundle directory.
-
-Default = `false`
-| |`bundle_install` |Use offline installation. Set to `true` to enable offline installation. 
-
-Default = `false`
-
-| |`ca_tls_cert` |TLS CA certificate.
-| |`ca_tls_key` | TLS CA key.
-| |`ca_tls_remote` |TLS CA remote files.
-
-Default = `false`
-| |`container_compress` |Container compression software.
-
-Default = `gzip`
-| |`container_keep_images` |Keep container images.
-
-Default = `false`
-| |`container_pull_images` |Pull newer container images.
-
-Default = `true`
-| |`custom_ca_cert` |Custom TLS CA certificate.
-| |`registry_auth` |Use registry authentication.
-
-Default = `true`
-| |`registry_ns_aap` |{PlatformNameShort} registry namespace.
-
-Default = `ansible-automation-platform-25`
-| |`registry_ns_rhel` |RHEL registry namespace.
-
-Default = `rhel8`
-| |`registry_tls_verify` |Verify registry TLS.
-
-Default = `true`
-
 |====
 
 
