AAP-32330 updated following peer review

--- a/downstream/modules/platform/con-gw-clustered-redis.adoc
+++ b/downstream/modules/platform/con-gw-clustered-redis.adoc
@@ -20,6 +20,6 @@ The benefits of deploying clustered Redis over standalone Redis include the foll
 
 Therefore, if you need data scalability and automatic failover, deploy {PlatformNameShort} with a clustered Redis. For more information about scalability with Redis, refer to link:https://redis.io/docs/latest/operate/oss_and_stack/management/scaling/[Scale with Redis Cluster] in the Redis product documentation.
 
-For information on deploying {PlatformNameShort} with clustered Redis, refer to the {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/rpm_installation[{TitleInstallationGuide}] guide, the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/containerized_installation[{TitleContainerizedInstall}] guide, or the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/installing_on_openshift_container_platform[{TitleOperatorInstallation}] guide.
+For information on deploying {PlatformNameShort} with clustered Redis, refer to the link:{LinkInstallationGuide}, link:{LinkContainerizedInstall}, and link:{LinkOperatorInstallation} guides.
 
 include::../aap-common/external-site-disclaimer.adoc[]
