fixing saas links and attribute

--- a/stories/topics/con-saas-automation-mesh.adoc
+++ b/stories/topics/con-saas-automation-mesh.adoc
@@ -12,4 +12,4 @@ image:automation_mesh.png[Execution node in a private address space ]
 
 You can also configure the automation mesh with outbound connectivity from the control plane to your execution plane, allowing you to specify the ports used by the automation mesh.
 
-You can use the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[Red Hat Ansible Automation Platform automation mesh for operator-based installations] documentation for instructions.
+You can use the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[Automation mesh for managed cloud or operator environments] documentation for instructions.
