--- a/stories/topics/con-saas-automation.adoc
+++ b/stories/topics/con-saas-automation.adoc
@@ -1,10 +1,9 @@
 [id="con-saas-automation"]
 = Automation using the {SaaSonAWS} control plane 
 
-The control plane is the command center to run automation. 
-Before automation can begin, the control plane must be configured to reach the execution nodes.
-Secure network traffic is essential for the hosted control plane and remote execution plane. 
-{SaaSonAWSShort} uses industry-standard communication protocols and modern encryption to keep this traffic secure.
+The {SaaSonAWS} offers a deployment of {PlatformNameShort} deployment purchased through AWS Marketplace. Red{nbsp}Hat configures and provisions an {PlatformNameShort}. The Red{nbsp}Hat team handles the setup and maintenance of the {PlatformNameShort}, ensuring reliability and security.
+
+While Red{nbsp}Hat manages the control plane, the execution plane is spread across your domains using automation mesh hop nodes and execution nodes. For help with configuring execution nodes see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[Automation mesh for managed cloud or operator environments].
 
 There are two ways to configure the communication between control nodes and execution nodes:
 
