--- a/stories/topics/ref-saas-egress-model.adoc
+++ b/stories/topics/ref-saas-egress-model.adoc
@@ -1,5 +1,5 @@
 [id="ref-saas-egress-model"]
-= Mesh egress model or PULL connectivity
+= PULL connectivity
 
 Remote automation mesh nodes can access {PlatformNameShort} using a 'polling' or 'pull' model, which does not require opening ingress ports in the firewall.
 This model eliminates the need for hop nodes from your DMZ to private networks if private networks have outbound internet connectivity.
