--- a/stories/topics/ref-saas-mesh-ingress-model.adoc
+++ b/stories/topics/ref-saas-mesh-ingress-model.adoc
@@ -1,5 +1,5 @@
 [id="ref-saas-mesh-ingress-model"]
-=  Mesh ingress model or PUSH connectivity
+= PUSH connectivity
 
 Customers can design their automation mesh architecture using the mesh ingress model and configure the communication ports. 
 The default port is 27199, which must not conflict with other traffic, such as HTTPS. 
