Clouds - update attributes and boilerplate text

--- a/titles/saas-aws/stories.adoc
+++ b/titles/saas-aws/stories.adoc
@@ -1,7 +1,8 @@
 // AAP common content
-include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
-include::{DocumentationFeedback}[leveloffset=+1]
-include::aap-common/external-site-disclaimer.adoc[leveloffset=+1]
+// AAP common content
+
+include::{Boilerplate}[]
+include::aap-common/external-site-disclaimer.adoc[]
 // Ansible as a Service user stories
 include::stories/assembly-saas-intro.adoc[leveloffset=+1]
 include::stories/assembly-saas-pull-push.adoc[leveloffset=+1]
