--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -134,7 +134,135 @@
 :SettingsIcon: &#9881;
 
 // Feedback module
-:DocumentationFeedback: aap-common/providing-feedback.adoc
+// :DocumentationFeedback: aap-common/providing-feedback.adoc
+
+
+
+// Feedback module
+:DocumentationFeedback: providing-feedback.adoc
+:Boilerplate: aap-common/boilerplate.adoc
+
+// Linux platforms
+:RHEL: Red Hat Enterprise Linux
+
+// 2.5 Gateway Menu selections
+// These menu selections were based on the UI build environment dated 05/03/24 and should be verified against the final build before GA
+// Top level menu definitions for use only when selections go 3 levels deep.
+:MenuTopAE: Automation Execution
+:MenuAD: Automation Decisions
+// Not yet used but looks to be future scoped and might replace Automation Execution > Infrastructure
+//:MenuAI: Automation Infrastructure
+:MenuTopAC: Automation Content
+:MenuAA: Automation Analytics
+:MenuAL: Ansible Lightspeed with IBM watsonx Code Assistant
+:MenuQS: Quick Starts
+// Not yet used but looks to be future scoped and will include a blend of menu selections that currently exist.
+//:MenuU: Utilities
+:MenuAM: Access Management
+//Might become Global Settings in the future with a few changed/new selections?
+:MenuAEAdminSettings: Settings
+
+// Automation Execution (aka automation controller menu items)
+:MenuAEJobs: menu:{MenuTopAE}[Jobs]
+:MenuAETemplates: menu:{MenuTopAE}[Templates]
+:MenuAESchedules: menu:{MenuTopAE}[Schedules]
+// FYI Automation Execution and Automation Decisions Projects will be under 1 selection in the 2.5-next or later.
+:MenuAEProjects: menu:{MenuTopAE}[Projects]
+
+// Automation Execution > Infrastructure
+:MenuInfrastructureTopology: menu:{MenuTopAE}[Infrastructure > Topology View]
+:MenuInfrastructureInventories: menu:{MenuTopAE}[Infrastructure > Inventories]
+:MenuInfrastructureHosts: menu:{MenuTopAE}[Infrastructure > Hosts]
+:MenuInfrastructureInstanceGroups: menu:{MenuTopAE}[Infrastructure > Instance Groups]
+:MenuInfrastructureInstances: menu:{MenuTopAE}[Infrastructure > Instances]
+:MenuInfrastructureExecEnvironments: menu:{MenuTopAE}[Infrastructure > Execution Environments]
+:MenuAECredentials: menu:{MenuTopAE}[Infrastructure > Credentials]
+:MenuAECredentialType: menu:{MenuTopAE}[Infrastructure > Credential Types]
+
+// Automation Execution > Administration
+:MenuAEAdminActivityStream: menu:{MenuTopAE}[Administration > Activity Stream]
+:MenuAEAdminWorkflowApprovals: menu:{MenuTopAE}[Administration > Workflow Approvals]
+:MenuAEAdminJobNotifications: menu:{MenuTopAE}[Administration > Notifiers]
+:MenuAEAdminManageJobs: menu:{MenuTopAE}[Administration > Management Jobs]
+
+//Each of the services previously had selections for access which will be centralized in 2.5, ultimately these should be changed to use the attributes in Access Management menu selections but I'm leaving these for later cleanup to avoid possible errors:
+:MenuControllerOrganizations: menu:{MenuAM}[Organizations]
+:MenuControllerUsers: menu:{MenuAM}[Users]
+:MenuControllerTeams: menu:{MenuAM}[Teams]
+
+// Automation Decisions (aka event driven automation menu selections)
+:MenuADRuleAudit: menu:{MenuAD}[Rule Audit]
+:MenuADRulebookActivations: menu:{MenuAD}[Rulebook Activations]
+// FYI Automation Execution and Automation Decisions Projects will be under 1 selection in the 2.5-next or later.
+:MenuADProjects: menu:{MenuAD}[Projects]
+:MenuADDecisionEnvironments: menu:{MenuAD}[Decision Environments]
+:MenuADEventStreams: menu:{MenuAD}[Event Streams]
+:MenuADCredentials: menu:{MenuAD}[Infrastructure > Credentials]
+:MenuADCredentialType: menu:{MenuAD}[Infrastructure > Credential Types]
+
+
+
+// Automation Content (aka automation hub menu selections)
+// In 2.5EA the Automation Content selection will open a hub ui instance in a new tab/browser so the menu definitions will not change until 2.5-next
+:MenuACNamespaces: menu:{MenuTopAC}[Namespaces]
+:MenuACCollections: menu:{MenuTopAC}[Collections]
+:MenuACExecEnvironments: menu:{MenuTopAC}[Execution Environments]
+
+// Automation Content > Administration
+:MenuACAdminSignatureKeys: menu:{MenuTopAC}[Signature Keys]
+:MenuACAdminRepositories: menu:{MenuTopAC}[Repositories]
+:MenuACAdminRemoteRegistries: menu:{MenuTopAC}[Remote Registries]
+:MenuACAdminTasks: menu:{MenuTopAC}[Task Management]
+:MenuACAdminCollectionApproval: menu:{MenuTopAC}[Collection Approvals]
+:MenuACAdminRemotes: menu:{MenuTopAC}[Remotes]
+:MenuACAPIToken: menu:{MenuTopAC}[API token]
+//Each of the services previously had selections for access which will be centralized, ultimately these should be changed to use the attributes in Access Management menu selections once automation hub is provide in the full ui platform experience in 2.5-next
+:MenuHubUsers: menu:{MenuAM}[Users]
+:MenuHubGroups: menu:User Access[Groups]
+:MenuHubRoles: menu:{MenuAM}[Roles]
+
+// Automation Analytics menu selections - According to mockups, analytics will be included in the Gateway nav only includes Automation Calculator, Host Metrics and Subscription Usage, other settings are also included on the Ansible dashboard on the Hybrid Cloud Console https://console.redhat.com/ansible/ansible-dashboard
+:MenuAAReports: menu:{MenuAA}[Reports]
+:MenuAASavingsPlanner: menu:{MenuAA}[Savings Planner]
+:MenuAAAutomationCalc: menu:{MenuAA}[Automation Calculator]
+:MenuAAHostMetrics: menu:{MenuAA}[Host Metrics]
+:MenuAAOrgStats: menu:{MenuAA}[Organization Statistics]
+:MenuAAJobExplorer: menu:{MenuAA}[Job Explorer]
+:MenuAAClusters: menu:{MenuAA}[Clusters]
+:MenuAANotifications: menu:{MenuAA}[Notification]
+//The following currently don't exist in the console but may be included in the 2.5 platform
+//:MenuAAActivityStream: menu:{MenuAA}[Activity Stream]
+//:MenuAAAnalyticsBuilder: menu:{MenuAA}[Analytics builder]
+//:MenuAAHostSubscriptionUse: menu:{MenuAA}[Subscription Usage]
+
+// Ansible Lightspeed menu selections
+// --- the following is not in the current build but may be added later ---
+//:MenuALSeatManagement: menu:{MenuAL}[Seat Management]
+
+// Access Management menu selections
+:MenuAMAuthentication: menu:{MenuAM}[Authentication Methods]
+:MenuAMOrganizations: menu:{MenuAM}[Organizations]
+:MenuAMTeams: menu:{MenuAM}[Teams]
+:MenuAMUsers: menu:{MenuAM}[Users]
+:MenuAMRoles: menu:{MenuAM}[Roles]
+:MenuAMAdminOauthApps: menu:{MenuAM}[OAuth Applications]
+// [ddacosta Credentials will not be centralized until 2.5-next]
+// :MenuAMCredentials: menu:{MenuAM}[Credentials]
+// :MenuAMCredentialType: menu:{MenuAM}[Credential Types]
+
+
+//Settings menu selections
+// --Previously settings was a single menu selection, in 2.5 it's a top level selection with sub selections see above for the attribute {MenuAEAdminSettings}
+:MenuSetSubscription: menu:{MenuAEAdminSettings}[Subscription]
+:MenuSetGateway: menu:{MenuAEAdminSettings}[Platform gateway]
+:MenuSetUserPref: menu:{MenuAEAdminSettings}[User Preferences]
+:MenuSetSystem: menu:{MenuAEAdminSettings}[System]
+:MenuSetJob: menu:{MenuAEAdminSettings}[Job]
+:MenuSetLogging: menu:{MenuAEAdminSettings}[Logging]
+:MenuSetTroubleshooting: menu:{MenuAEAdminSettings}[Troubleshooting]
+// Not yet implemented but look to be in the future scope 2.5-next plan
+//:MenuSetLogin: {MenuAEAdminSettings}[Log In Settings]
+//:MenuSetUI: {MenuAEAdminSettings}[User Interface Settings]
 
 // Title and link attributes
 //
