--- a/titles/aap-on-azure/stories.adoc
+++ b/titles/aap-on-azure/stories.adoc
@@ -1,7 +1,7 @@
 // AAP common content
-include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
-include::{DocumentationFeedback}[leveloffset=+1]
-include::aap-common/external-site-disclaimer.adoc[leveloffset=+1]
+
+include::{Boilerplate}[]
+include::aap-common/external-site-disclaimer.adoc[]
 // AAP on Azure user stories
 //
 // Introduction
