Removed post-install steps
Commented out until a working procedure is provided.

remove postinstall from documentation

https://issues.redhat.com/browse/AAP-33779

--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -237,7 +237,7 @@ HAProxy SSL passthrough mode is not supported with {Gateway}.
 controller_license_file=<full_path_to_your_manifest_zip_file>
 ----
 
-* To define the license file as part of the postinstall process instead, see xref:using-postinstall_{context}[Using the postinstall feature of containerized {PlatformNameShort}].
+//* To define the license file as part of the postinstall process instead, see xref:using-postinstall_{context}[Using the postinstall feature of containerized {PlatformNameShort}].
 
 
 == Running the installation command
